fixing back to content alignment
https://www.pivotaltracker.com/story/show/47720133

--- a/app/assets/stylesheets/frontend/views/_detailed_guides.scss
+++ b/app/assets/stylesheets/frontend/views/_detailed_guides.scss
@@ -223,6 +223,7 @@
 
   .back-to-content {
     position: fixed;
+    padding-left: $gutter;
     top: $gutter-half;
     a {
       display: block;
